--- a/index.html
+++ b/index.html
@@ -27,9 +27,12 @@
             </ul>
         </nav>
  </header>
- <main>
-    <section></section>
- </main>
+ <div class="container">
+<main>
+    <h1>Tutto ciò che ti serve per il lavoro, in un unico posto </h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo ex temporibus consequatur, pariatur et reiciendis porro quibusdam ipsam dignissimos nam labore ut impedit quis necessitatibus similique saepe facilis, nobis ratione.</p>
+</main>
+</div>
  <footer></footer>
 </body>
 </html>
